crates/edm/tests/snapshots/market_single__http_405_stdout.snap
---
source: crates/edm/tests/market_single.rs
expression: run.stdout
---
== REQUEST  GET /2.0/elite/market/list =============================================================
+--------------+--------------------------------------------------------+
| Field        | Value                                                  |
+==============+========================================================+
| TARGET                                                                |
+--------------+--------------------------------------------------------+
| method       | GET                                                    |
| endpoint     | https://api.orerve.net/2.0/elite/market/list           |
| query        | 2,936 chars base64 HN9rekbNviulAOSB92c0...IdN+Fw9eu00= |
+--------------+--------------------------------------------------------+
| HEADERS                                                               |
+--------------+--------------------------------------------------------+
| encrypted    | 1                                                      |
| fdev-retry   | 0/2                                                    |
| fdev-season  | 4                                                      |
| fdev-semver  | 4.4.0.3                                                |
| nonce        | 000000000000                                           |
| request-time | 12345000                                               |
| user-agent   | EDGame/11.0/Win64                                      |
+--------------+--------------------------------------------------------+
| ENVELOPE                                                              |
+--------------+--------------------------------------------------------+
| marketId     | 4306502403                                             |
| cmdrId       | F1234567                                               |
| fTime        | 1700000000                                             |
| machineId    | machine-1                                              |
| machineToken | 80 chars (hidden)                                      |
| authToken    | 2024 chars (hidden)                                    |
| plaintext    | 2,201 bytes                                            |
| nonce        | 000000000000                                           |
| fTime        | 1700000000 (2023-11-14T22:13:20.000Z)                  |
| requestTime  | 12,345,000 ms (uptime 03:25:45)                        |
+--------------+--------------------------------------------------------+
   pass --full-url to print the encrypted query in full
== RESPONSE  HTTP 405 Method Not Allowed ===========================================================
+----------+--------------+
| Field    | Value        |
+==========+==============+
| HEADERS                 |
+----------+--------------+
| allow    | PUT, OPTIONS |
+----------+--------------+
