crates/edm/tests/snapshots/market_single__http_500_stderr.snap
---
source: crates/edm/tests/market_single.rs
expression: run.stderr
---
GET /2.0/elite/market/list failed: HTTP 500 Internal Server Error
