crates/edm/tests/snapshots/market_single__success.snap
---
source: crates/edm/tests/market_single.rs
expression: run.stdout
---
== REQUEST  GET /2.0/elite/market/list =============================================================
+--------------+--------------------------------------------------------+
| Field        | Value                                                  |
+==============+========================================================+
| TARGET                                                                |
+--------------+--------------------------------------------------------+
| method       | GET                                                    |
| endpoint     | https://api.orerve.net/2.0/elite/market/list           |
| query        | 2,936 chars base64 HN9rekbNviulAOSB92c0...IdN+Fw9eu00= |
+--------------+--------------------------------------------------------+
| HEADERS                                                               |
+--------------+--------------------------------------------------------+
| encrypted    | 1                                                      |
| fdev-retry   | 0/2                                                    |
| fdev-season  | 4                                                      |
| fdev-semver  | 4.4.0.3                                                |
| nonce        | 000000000000                                           |
| request-time | 12345000                                               |
| user-agent   | EDGame/11.0/Win64                                      |
+--------------+--------------------------------------------------------+
| ENVELOPE                                                              |
+--------------+--------------------------------------------------------+
| marketId     | 4306502403                                             |
| cmdrId       | F1234567                                               |
| fTime        | 1700000000                                             |
| machineId    | machine-1                                              |
| machineToken | 80 chars (hidden)                                      |
| authToken    | 2024 chars (hidden)                                    |
| plaintext    | 2,201 bytes                                            |
| nonce        | 000000000000                                           |
| fTime        | 1700000000 (2023-11-14T22:13:20.000Z)                  |
| requestTime  | 12,345,000 ms (uptime 03:25:45)                        |
+--------------+--------------------------------------------------------+
   pass --full-url to print the encrypted query in full
== RESPONSE  HTTP 200 OK ===========================================================================
+------------------+--------------------------+
| Field            | Value                    |
+==================+==========================+
| HEADERS                                     |
+------------------+--------------------------+
| content-type     | application/octet-stream |
| nonce            | 0123456789ab             |
| uncompressedsize | 906                      |
+------------------+--------------------------+
== MARKET SUMMARY  market 4306502403 ===============================================================
+-----------------------+-------------------+
| Field                 | Value             |
+=======================+===================+
| credits               | 1,000,000 cr      |
| debt                  | 0 cr              |
| commodities           | 3 in 2 categories |
| supplied (stock > 0)  | 2                 |
| in demand             | 1                 |
| consumers / producers | 1 / 2             |
| rare / illegal        | 0 / 0             |
| allowsDumping         | yes               |
| inventory items       | 1                 |
+-----------------------+-------------------+
== INVENTORY  1 items ==============================================================================
+------------+-----+--------+---+--------+-------+--------+----------------------+
| Commodity  | Qty |  Value | S | Marked | Owner | Origin | Position (x / y / z) |
+============+=====+========+===+========+=======+========+======================+
| Gold       |  10 | 90,000 | . |      - |     0 |      0 | -                    |
+------------+-----+--------+---+--------+-------+--------+----------------------+
== COMMODITIES  3 entries in 2 categories ==========================================================
+-----------+--------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
|        ID | Commodity    | Stock | Stk |   Buy |  Sell | Fence | Demand | Dmd |  Mean | CPRI |
+===========+==============+=======+=====+=======+=======+=======+========+=====+=======+======+
| METALS  2 items | 2 supplied | 0 in demand                                                   |
+-----------+--------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
| 128049204 | Gold         |   120 | ##. | 9,000 | 8,900 |     - |      - | ... | 9,500 | .P.. |
| 128049205 | Silver       |    40 | #.. | 4,600 | 4,550 |     - |      - | ... | 4,800 | .P.. |
+-----------+--------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
| WASTE  1 items | 0 supplied | 1 in demand                                                    |
+-----------+--------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
| 128049669 | Biowaste     |     - | ... |     - |    60 |     - |    900 | ### |    65 | C... |
+-----------+--------------+-------+-----+-------+-------+-------+--------+-----+-------+------+
   legend: '-' zero | CPRI = Consumer/Producer/Rare/Illegal | Stk,Dmd meters '###' bracket 3 ..
   '...' bracket 0 | '~' truncated
